--- a/src/app/views/score.html
+++ b/src/app/views/score.html
@@ -24,52 +24,36 @@
     </div>
 </div>
 
-<div class="container-box">
-    <h2>PUNTAJES</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>
-                    Rank
-                </th>
-                <th>
-                    Nombre
-                </th>
-                <th>
-                    Score
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>
-                    1
-                </td>
-                <td>Eliam</td>
-                <td>2000 pts</td>
-            </tr>
-            <tr>
-                <td>
-                    2
-                </td>
-                <td>Zaira</td>
-                <td>1300 pts</td>
-            </tr>
-            <tr>
-                <td>
-                    3
-                </td>
-                <td>Debahni</td>
-                <td>1000 pts</td>
-            </tr>
-        </tbody>
-    </table>
+<div class="container">
+    <div class="d-flex align-items-center justify-content-center vh-100">
+        <div class="text-center w-100">
+            <h1>PUNTAJES</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>
+                            Rank
+                        </th>
+                        <th>
+                            Nombre
+                        </th>
+                        <th>
+                            Score
+                        </th>
+                    </tr>
+                </thead>
+                <tbody id="table-body">
+                    
+                </tbody>
+            </table>
 
-    <!--Stars-->
-    <div class="wrapper">
-        <div id="stars"></div>
-        <div id="stars2"></div>
-        <div id="stars3"></div>
+            <!--Stars-->
+            <div class="wrapper">
+                <div id="stars"></div>
+                <div id="stars2"></div>
+                <div id="stars3"></div>
+            </div>
+        </div>
     </div>
 </div>
 
