--- a/src/app/views/configuration.html
+++ b/src/app/views/configuration.html
@@ -24,29 +24,29 @@
     </div>
 </div>
 
-<h2 class="config-title">CONFIGURACIONES</h2>
+<h2 class="config-title">AJUSTES</h2>
   <!--Particulas-->
   <div class="bubbles-circle"></div>
 
 <div class="content">
     <div class="menus">
         <nav>
-            <a class="button button-anim" style="--clr:#8A7DFD" id="btn-graficos">
+            <button class="button button-anim" style="--clr:#8A7DFD" id="btn-graficos">
                 <span>GRÁFICOS</span>
               
-            </a>
+            </button>
         </nav>
         <nav>
-            <a class="button button-anim" style="--clr:#8A7DFD" id="btn-audio">
+            <button class="button button-anim" style="--clr:#8A7DFD" id="btn-audio">
                 <span>AUDIO</span>
               
-            </a>
+            </button>
         </nav>
         <nav>
-            <a class="button button-anim" style="--clr:#8A7DFD" id="btn-controles">
+            <button class="button button-anim" style="--clr:#8A7DFD" id="btn-controles">
                 <span>CONTROLES</span>
               
-            </a>
+            </button>
         </nav>
     </div>
     <div class="ajustes">
@@ -73,7 +73,7 @@
                 </button>
             </form>
         </div>
-        <div class="audio" id="audio-vista" hidden>
+        <div class="audio" id="audio-vista" style="display:none">
             <form id="form-audio">
                 <label for="sonido-id" class="form-label">HABILITAR/DESHABILITAR</label>
                 <input type="checkbox" class="form-check" id="sonido-id" name="sonido_name"><br><br><br>
