Items and Rescale

--- a/src/app/views/dificulty.html
+++ b/src/app/views/dificulty.html
@@ -6,7 +6,7 @@
 
             <!--Btn facil-->
             <div>
-                <a class="btn button button-anim" id="btn-easy" style="--clr:#8A7DFD" href="/scenarios" value="Easy">
+                <a class="btn button button-anim" id="btn-easy" style="--clr:#8A7DFD" href="/scenarios" value="NORMAL">
                     <span>MODO FÁCIL</span>
                     <i class="widget"></i>
                 </a>
@@ -14,7 +14,7 @@
 
             <!--Btn dificil-->
             <div>
-                <a class="btn button button-anim" id="btn-hard" style="--clr:#8A7DFD" href="/scenarios" value="Hard">
+                <a class="btn button button-anim" id="btn-hard" style="--clr:#8A7DFD" href="/scenarios" value="HARD">
                     <span>MODO DÍFICIL</span>
                     <i class="widget"></i>
                 </a>
