--- a/src/app/views/players.html
+++ b/src/app/views/players.html
@@ -4,13 +4,13 @@
         <div class="text-center">
             <h2 id="players-title"></h2>
             <div>
-                <a class="btn button button-anim" id="btn-singleplayer" href="/mode" value="singleplayer">
+                <a class="btn button button-anim" id="btn-singleplayer" href="/mode" value="SINGLEPLAYER">
                     <span><i class="bx bx-user"></i> LOCAL</span>
                     <i class="widget"></i>
                 </a>
             </div>
             <div>
-                <a class="btn button button-anim" id="btn-multiplayer" href="/mode" value="multiplayer">
+                <a class="btn button button-anim" id="btn-multiplayer" href="/mode" value="MULTIPLAYER">
                     <span><i class="bx bx-group"></i> EN LÍNEA</span>
                     <i class="widget"></i>
                 </a>
