--- a/src/app/views/scenario.html
+++ b/src/app/views/scenario.html
@@ -16,17 +16,17 @@
 <div class="container">
     <h2 id="scenario-title" class="text-center"></h2>
         <div class="flex-container">
-            <a class="flex-item-desert" href="/game" id="btn-desert" value="Desert">
+            <a class="flex-item-desert" href="/game" id="btn-desert" value="DESERT">
                 <div class="capa">
                     <h2></h2>
                 </div>
             </a>
-            <a class="flex-item-forest" href="/game" id="btn-forest" value="Forest">
+            <a class="flex-item-forest" href="/game" id="btn-forest" value="FOREST">
                 <div class="capa">
                     <h2></h2>
                 </div>
             </a>
-            <a class="flex-item-snow" href="/game" id="btn-snow" value="Snow">
+            <a class="flex-item-snow" href="/game" id="btn-snow" value="SNOW">
                 <div class="capa">
                     <h2></h2>
                 </div>
