--- a/src/app/views/mode.html
+++ b/src/app/views/mode.html
@@ -5,7 +5,7 @@
             <h2 id="mode-title"></h2>
 
             <div>
-                <a class="btn button button-anim" href="/dificulty" id="btn-checkmate" value="checkmate"
+                <a class="btn button button-anim" href="/dificulty" id="btn-checkmate" value="CHECKMATE"
                     style="--clr:#8A7DFD">
                     <span>JAQUE MATE</span>
                     <i class="widget"></i>
@@ -14,7 +14,7 @@
 
             <div>
                 <a class="btn button button-anim" href="/dificulty" id="btn-coldwar" style="--clr:#8A7DFD"
-                    value="coldwar">
+                    value="COLDWAR">
                     <span>GUERRA FRÍA</span>
                     <i class="widget"></i>
                 </a>
@@ -24,7 +24,7 @@
                 <a class="button" href="/players" id="btn-return" style="--clr:#8A7DFD">
                     <span></span>
                     <i id="#regreso"></i>
-                    <i class='bx bx-undo'></i>
+                    <i class="bx bx-undo"></i>
                 </a>
             </div>
         </div>
