--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="./js/bubbles.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <meta property="og:url"           content="http://localhost:3000" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Your Website Title" />
+    <meta property="og:description"   content="Your description" />
+    <meta property="og:image"         content="./assets/images/pantalla3.png" />
 </head>
 <body>
     <!--<div class="bubbles-circle"></div>-->
