--- a/src/app/views/game.html
+++ b/src/app/views/game.html
@@ -1,5 +1,5 @@
 <div class="loader-wrapper">
-    <h5>Buscando jugadores...</h5>
+    <h5 id="loading-label">Buscando jugadores...</h5>
     <div class="loader">
         <span style="--i:1"></span>
         <span style="--i:2"></span>
