--- a/src/app/views/home.html
+++ b/src/app/views/home.html
@@ -71,6 +71,9 @@
     </div>
 
     <div id="menu-buttons">
+
+        <button id="fab">Click me</button>
+
         <!--Btn Start-->
         <div id="contain-play">
             <a class="button clikeable" href="/players" id="btn-play" style="--clr:#8A7DFD">
