--- a/src/app/styles/home.css
+++ b/src/app/styles/home.css
@@ -10,6 +10,10 @@
     font-size: 6rem !important;
 }
 
+#home-title::after {
+    content: "HEXCHESS";
+}
+
 @media (max-width: 800px) {
     h1 {
         font-size: 4rem !important;
@@ -22,10 +26,6 @@
     }
 }
 
-#home-title::after {
-    content: "HEXCHESS";
-}
-
 @keyframes transition {
     0% {
         opacity: 0;
@@ -36,40 +36,9 @@
     }
 }
 
-/*
-body::after {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: -100vw;
-    left: 0;
-    transition: all .3s;
-}
-*/
 
-.content {
-    display: none;
-}
 
 /*Loader*/
-.loader-wrapper {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-}
-
-.loader-wrapper h5 {
-    position: absolute;
-    top: 70%;
-    right: 44%;
-    color: #fff;
-    display: flex;
-    font-size: 20px;
-    text-shadow: 0 0 20px #A29CD7;
-    font-family: 'Silkscreen', cursive;
-    animation: opatext 5s linear infinite;
-}
 
 @keyframes opatext {
     0% {
@@ -81,41 +50,6 @@ body::after {
     }
 }
 
-.loader-wrapper .loader {
-    position: fixed;
-    right: 45%;
-    top: 45%;
-    width: 100px;
-    height: 100px;
-}
-
-.loader-wrapper .loader span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: rotate(calc(18deg * var(--i)));
-}
-
-.loader-wrapper .loader span::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background: rgb(112, 79, 201);
-    box-shadow: 0 0 10px rgb(112, 79, 201),
-        0 0 20px rgb(112, 79, 201),
-        0 0 40px rgb(112, 79, 201),
-        0 0 60px rgb(112, 79, 201),
-        0 0 80px rgb(112, 79, 201),
-        0 0 100px rgb(112, 79, 201);
-    animation: animate 2s linear infinite;
-    animation-delay: calc(0.1s * var(--i));
-}
 
 @keyframes animate {
     0% {
@@ -142,48 +76,6 @@ body::after {
 /*--------------------------------------------------------------------------------------*/
 /*Modal*/
 
-#inicio-modal,
-#registro-modal {
-    position: fixed;
-    top: 25%;
-}
-
-#inicio-modal .modal-dialog .modal-content {
-    color: #fff;
-    font-family: 'Silkscreen', cursive;
-}
-
-#registro-modal .modal-dialog .modal-content {
-    color: #fff;
-    font-family: 'Silkscreen', cursive;
-}
-
-#inicio-modal .modal-dialog .modal-content .modal-header h5 {
-    position: absolute;
-    right: 30%;
-    font-size: 25px;
-}
-
-#registro-modal .modal-dialog .modal-content .modal-header h5 {
-    position: absolute;
-    right: 38%;
-    font-size: 25px;
-}
-
-#btn_close,
-#btn_save,
-#btn_regresarI,
-#btn_register {
-    background: rgb(58, 33, 146);
-    border: none;
-}
-
-#btn_close:hover,
-#btn_save:hover,
-#btn_regresarI:hover,
-#btn_register:hover {
-    background: rgb(123, 90, 245);
-}
 
 #facebook_connect:hover {
     background: rgb(77, 118, 253);
@@ -241,27 +133,14 @@ body::after {
     }
 }
 
-/*-----------------------------------------------------------------------------*/
 
-.loading::after {
-    top: 0;
-}
-
-/*-----------------------------------------------------------------------------*/
 /*Btn play*/
 #btn-play {
     position: relative;
     font-size: 2.5em;
     letter-spacing: 0.1em;
-    padding: 10px 30px;
-    padding-left: 15px;
-    padding-right: 15px;
-
+    padding: 10px 20px;
     margin-bottom: 1em;
-}
-
-#btn-play span {
-    z-index: 1;
 }
 
 #btn-play i::before {
@@ -309,11 +188,8 @@ body::after {
     padding: 10px 20px;
     font-size: 1.5em;
     letter-spacing: 0.1em;
+    margin-top: 0.5em;
     transition: 0.5s;
-}
-
-#btn-config span, #btn-score span,#btn-usuario span {
-    z-index: 1;
 }
 
 #btn-config #mov, #btn-score #mov, #btn-usuario #movu {
