--- a/src/app/styles/scenario.css
+++ b/src/app/styles/scenario.css
@@ -1,3 +1,13 @@
+@keyframes animate {
+    0% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(0);
+    }
+}
+
 /*Desierto*/
 .flex-container {
     display: flex;
