--- a/src/app/views/score.html
+++ b/src/app/views/score.html
@@ -28,24 +28,20 @@
     <div class="d-flex align-items-center justify-content-center vh-100">
         <div class="text-center w-100">
             <h1>PUNTAJES</h1>
-            <table>
-                <thead>
-                    <tr>
-                        <th>
-                            Rank
-                        </th>
-                        <th>
-                            Nombre
-                        </th>
-                        <th>
-                            Score
-                        </th>
-                    </tr>
-                </thead>
-                <tbody id="table-body">
-                    
-                </tbody>
-            </table>
+            
+            <div class="table-responsive table-wrapper scrollbar overflow-auto">
+                <table class="table table-striped table-borderless mb-0">
+                    <thead class="sticky-top">
+                        <tr>
+                            <th scope="col">Rank</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Score</th>
+                        </tr>
+                    </thead>
+                    <tbody id="table-body">
+                    </tbody>
+                </table>
+            </div>
 
             <!--Stars-->
             <div class="wrapper">
