--- a/src/app/views/signup.html
+++ b/src/app/views/signup.html
@@ -13,6 +13,8 @@
                 <input type="password" name="password" id="password" class="form-control">
             </div>
 
+            <a href="/login">Login</a>
+
             <div>
                 <button type="submit" class="btn button button-anim" id="btn-multiplayer" href="/mode" value="multiplayer">
                     <span>Registrarse</span>
