--- a/src/app/views/configuration.html
+++ b/src/app/views/configuration.html
@@ -51,11 +51,11 @@
     </div>
     <div class="ajustes">
         <div class="graficos" id="graficos-vista">
-            <form id="form-graficos">
+            <form id="graphics-form">
                 <label for="fov-id" class="form-label">FOV</label>
                 <input type="range" class="form-range" id="fov-id" name="fov_name" min="0" max="100"><br><br><br>
                 <label for="sombras-id" class="form-label">SOMBRAS</label>
-                <input type="checkbox" class="form-check" id="sombras-id" name="sombras_name"><br><br><br>
+                <input type="checkbox" class="form-check" id="sombras-id" name="shadows"><br><br><br>
                 <label class="form-label">OUTPUT ENCODING</label> <br><br><br>
                 <label for="srgb-id" class="form-label">SRGBENCODING</label>
                 <input type="checkbox" class="form-check" id="srgb-id" name="srgb_name"> &nbsp;&nbsp;
