--- a/src/app/styles/score.css
+++ b/src/app/styles/score.css
@@ -1,72 +1,65 @@
 .scrollbar {
-    position: relative;
-    height: 300px;
-    
+  position: relative;
+  height: 300px;
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #444444; 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #444444; 
-  }
-
-
-h1 {
-    font-family: 'Silkscreen', cursive;
-    color: #fff;
-    
-    font-size: 35px;
-    text-shadow: 0 0 20px #fff;
+  width: 10px;
 }
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(28, 22, 46);
+}
 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #444444;
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #333333;
+}
+
+h1 {
+  font-family: "Silkscreen", cursive;
+  color: #fff;
+
+  font-size: 35px;
+  text-shadow: 0 0 20px #fff;
+}
 
 /*-----------------------------------------------------------------------------------*/
 /*tabla*/
 
 table {
-    
-    font-size: 1.5rem;
-    
-   
-    justify-content: center;
-    
-    align-items: center;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+  font-size: 1.5rem;
+
+  justify-content: center;
+
+  align-items: center;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-
 
 th,
 td {
-    color: #fff;
-    font-family: 'Silkscreen', cursive;
-    padding: 1rem;
+  color: #fff;
+  font-family: "Silkscreen", cursive;
+  padding: 1rem;
 }
 
 tr {
-    background: rgb(28, 22, 46);
-    color: #fff;
+  background: rgb(28, 22, 46);
+  color: #fff;
 }
 
 tbody tr:hover {
-    color: #fff;
-    background: rgb(53, 42, 87);
+  color: #fff;
+  background: rgb(53, 42, 87);
 }
 
 /*-----------------------------------------------------------------------------------*/
@@ -74,59 +67,59 @@ tbody tr:hover {
 /*Btn-Return*/
 
 #btn-return {
-    position: absolute;
-    right: 2em;
-    top: 2em;
-    font-size: 1.2em;
-    letter-spacing: 0.1em;
-    padding: 10px 30px;
+  position: absolute;
+  right: 2em;
+  top: 2em;
+  font-size: 1.2em;
+  letter-spacing: 0.1em;
+  padding: 10px 30px;
 }
 
 #btn-return::before {
-    content: '';
-    inset: 2px;
-    background: #27282c;
+  content: "";
+  inset: 2px;
+  background: #27282c;
 }
 
 #btn-return span {
-    z-index: 1;
+  z-index: 1;
 }
 
 #btn-return i {
-    inset: 0;
-    display: block;
+  inset: 0;
+  display: block;
 }
 
 #btn-return #regreso::before {
-    content: '';
-    position: absolute;
-    top: -3%;
-    left: 93%;
-    width: 10px;
-    height: 5px;
-    background: #2c2727;
-    transform: translateX(-50%) skewX(325deg);
-    transition: 0.5s;
+  content: "";
+  position: absolute;
+  top: -3%;
+  left: 93%;
+  width: 10px;
+  height: 5px;
+  background: #2c2727;
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
 }
 
 #btn-return:hover #regreso::before {
-    width: 20px;
-    left: 20%;
+  width: 20px;
+  left: 20%;
 }
 
 #btn-return #regreso::after {
-    content: '';
-    position: absolute;
-    top: 97%;
-    left: 30%;
-    width: 10px;
-    height: 5px;
-    background: #2c2727;
-    transform: translateX(-50%) skewX(325deg);
-    transition: 0.5s;
+  content: "";
+  position: absolute;
+  top: 97%;
+  left: 30%;
+  width: 10px;
+  height: 5px;
+  background: #2c2727;
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
 }
 
 #btn-return:hover #regreso::after {
-    width: 20px;
-    left: 80%;
+  width: 20px;
+  left: 80%;
 }
