--- a/src/app/views/login.html
+++ b/src/app/views/login.html
@@ -4,18 +4,24 @@
             <h2 id="">Iniciar sesión</h2>
 
             <div class="mb-5">
-                <label for="username" class="form-label" role="button">Nombre de usuario:</label>
+                <label id="signin1" for="username" class="form-label" role="button">Nombre de usuario:</label>
                 <input type="text" name="username" id="username" class="form-control">
             </div>
 
             <div>
-                <label for="password" class="form-label" role="button">Contraseña:</label>
+                <label id="signin" for="password" class="form-label" role="button">Contraseña:</label>
                 <input type="password" name="password" id="password" class="form-control">
             </div>
-
+           <br><br>
             <div>
-                <button type="submit" class="btn button button-anim" id="btn-login" value="multiplayer">
+                <button type="submit" class="btn button button-anim" id="btn-login" value="login">
                     <span>Iniciar sesión</span>
+                    <i class="widget"></i>
+                </button>
+                &nbsp;&nbsp;
+
+                <button type="submit" class="btn button button-anim" id="btn-guess" value="guess">
+                    <span>Invitado</span>
                     <i class="widget"></i>
                 </button>
             </div>
