--- a/src/app/views/signup.html
+++ b/src/app/views/signup.html
@@ -4,19 +4,19 @@
             <h2 id="signup-title"></h2>
 
             <div class="mb-5">
-                <label for="username" class="form-label" role="button">Nombre de usuario:</label>
+                <label id="signup1"  for="username" class="form-label" role="button">Nombre de usuario:</label>
                 <input type="text" name="username" id="username" class="form-control">
             </div>
 
             <div>
-                <label for="password" class="form-label" role="button">Contraseña:</label>
+                <label id="signup" for="password" class="form-label" role="button">Contraseña:</label>
                 <input type="password" name="password" id="password" class="form-control">
-            </div>
+            </div><br><br>
 
-            <a href="/login">Login</a>
+            <a href="/login">Login</a> <br><br>
 
             <div>
-                <button type="submit" class="btn button button-anim" id="btn-multiplayer" href="/mode" value="multiplayer">
+                <button type="submit" class="btn button button-anim" id="btn-register" href="/mode" value="register">
                     <span>Registrarse</span>
                     <i class="widget"></i>
                 </button>
