--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,12 +9,11 @@
 
     <meta property="og:url"           content="http://localhost:3000" />
     <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Your Website Title" />
+    <meta property="og:title"         content="HexChess" />
     <meta property="og:description"   content="Your description" />
     <meta property="og:image"         content="./assets/images/pantalla3.png" />
 </head>
 <body>
-    <!--<div class="bubbles-circle"></div>-->
     <main id="root">Habilita JavaScript en tu navegador para disfrutar de la experiencia</main>
 </body>
 </html>
