--- a/src/app/views/configuration.html
+++ b/src/app/views/configuration.html
@@ -51,7 +51,7 @@
     </div>
     <div class="ajustes">
         <div class="graficos" id="graficos-vista">
-            <form id="form-graficos">
+            <form id="graphics-form">
                 <label for="fov-id" class="form-label">FOV</label>
                 <input type="range" class="form-range" id="fov-id" name="fov-name" min="0" max="100"><br><br>
                 <div class="form-check form-switch">
