--- a/src/frontend/views/home.html
+++ b/src/frontend/views/home.html
@@ -72,7 +72,7 @@
 
     <div id="menu-buttons">
 
-        <button id="fab">Click me</button>
+        <!--<button id="fab">Click me</button>-->
 
         <!--Btn Start-->
         <div id="contain-play">
@@ -84,7 +84,7 @@
 
         <!--Btn Config-->
         <div style="display:inline" id="contain-config">
-            <a href="/configuration" class="button clickeable" id="btn-config"
+            <a href="/configuration" class="btn button clickeable" id="btn-config"
                 style="--clr:#8A7DFD; display: inline-block;">
                 <span></span>
                 <i id="mov" class="clickeable"></i>
@@ -94,7 +94,7 @@
 
         <!--Btn Score-->
         <div style="display:inline" id="contain-config">
-            <a href="/score" class="button clickeable" id="btn-score" 
+            <a href="/score" class="btn button clickeable" id="btn-score" 
                 style="--clr:#8A7DFD; display: inline-block;">
                 <span></span>
                 <i id="mov" class="clickeable"></i>
@@ -104,7 +104,7 @@
 
         <!--Btn Usuario-->
         <div style="display:inline" id="contain-usuario">
-            <a class="button clickeable" id="btn-user" href="/signup"
+            <a class="btn button clickeable" id="btn-user" href="/signup"
                 style="--clr:#8A7DFD; display: inline-block;">
                 <span></span>
                 <i id="movu" class="clickeable"></i>
