--- a/src/frontend/views/pause.html
+++ b/src/frontend/views/pause.html
@@ -1,6 +1,6 @@
-<canvas id="canvas"></canvas>
+<!--<canvas id="canvas"></canvas>-->
 
-<section class="container">
+<section class="container position-absolute" style="display: none" id="pause-menu">
     <div class="d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
         <h2 style="font-size:55px">PAUSA</h2>
@@ -17,7 +17,7 @@
 
         <!--Btn Reiniciar-->
         <div >
-            <a class="btn button button-anim" type="submit" id="btn-reiniciar" style="--clr:#8A7DFD" 
+            <a class="btn button button-anim" type="submit" id="btn-resume" style="--clr:#8A7DFD" 
             >
                 <span></span>
                 <i id="restart"></i>
@@ -25,24 +25,7 @@
             </a>
         </div>
 
-        <!--Btn Exit-->
-        <div>
-            <a class="btn button button-anim" id="btn-exit" href="/configuration"
-                >
-                <span></span>
-                <i id="salir"></i>
-                <i class="bx bx-cog"></i>
-            </a>
-        </div>
     </div>
-<!--
-        <div>
-            <a class="button button-anim" id="btn-reanudar" href="/game" style="--clr:#8A7DFD"
-                class="btn btn-primary btn-lg">
-                <span>REANUDAR</span>
-                <i class="widget"></i>
-            </a>
-        </div>
-    -->
+
     </div>
 </section>
